tests/custom/STARIS_2022/basic/matrices/matrix-index-error/stderr.expected
Error:
    matrix-index-error.essence:5:18:
  |
5 | such that b = (a[1][true] = 1) $ swapped bool and int indices
  |                  ^
Type error:
	Expected: bool
	Got: int

matrix-index-error.essence:5:21:
  |
5 | such that b = (a[1][true] = 1) $ swapped bool and int indices
  |                     ^^^^
Type error:
	Expected: int
	Got: bool

cat: *.solution: No such file or directory
